--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ venv
 QuoteEngine/__pycache__
 *.pyc
 Test_*
-static
+static/
 MemeEngine/Test_Playground.py
 MemeEngine/Test_os.py
 MemeEngine/__pycache__/*
